// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="css-ystjmw0 css-1iv56da"
  style={Object {}}
  type="confirmation"
>
  <i
    className="css-1qps5ds0 css-1clu7cm"
    color="green"
    onClick={undefined}
    size={16}
    style={Object {}}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <title>
        check_circle
      </title>
      <use
        href="#check_circle"
      />
    </svg>
  </i>
  <span
    className="css-16ef8bd0 css-1oduhpk"
    color="green"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A confirmation alert
  </span>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="css-ystjmw0 css-bf0m8n"
  style={Object {}}
  type="warning"
>
  <span
    className="css-16ef8bd0 css-i4nqd3"
    color="orange"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A warning alert
  </span>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="css-ystjmw0 css-1c4u18i"
  style={Object {}}
  type="info"
>
  <span
    className="css-16ef8bd0 css-1bicsvo"
    color="blue"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A info alert
  </span>
</div>
`;
